should hopefully fix the bug with the white background on scroll on mobile.

--- a/scss/_common-styles.scss
+++ b/scss/_common-styles.scss
@@ -1,5 +1,5 @@
 
-.panel, body, ion-content {
+.panel, body, ion-content, html {
 	background-color: #EEE;
 }
 
